# pokeroast

./: .gitignore  hall_of_shame.json  pyproject.toml  requirements.txt
src/pokeroast/: __main__.py  app.py  config.py  main.py  roaster.py
tests/: test_core.py
