[project]
name = "pokeroast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maxykoin", email = "stayerim@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
